yoshimi 1.5.10 M

2019-2-23 Will
* Installed placeholder FileMgr in /src/Interface
  This will eventually handle all actual file operations
  for consistency and simlifying porting to other systems.
* Started moving file functions from MiscFuncs to FileMgr.

2019-2-20 Will.
* Added missing LFO intensity control description to CLI.
* Adjusted CMakeLists.txt for better 'native' recognition.
* Copied in Rob's FLTK fix.
* Moved cairo tests inside fltk build option.

2019-2-14 Will
* Now only the main instance can change bank structure.
  Others can read/change their current selected ones.
* Updated dependencies.

2019-02-10 Rob
* put FLTK sources & libs back in old places in CMakeLists -- tacking
  the libs on at end of the list sometimes broke linker command line.
  It's an empty string when GUI_FLTK=0, anyway.

2019-2-6 Will
* Almost completed GUI detachment for headless.
* Applied patch from Rob - completes headless builds.

2019-2-1 Will
* Enabled headless build (Not LV2).
  Not fully tested.

2019-1-27 Will
* Enabled full CLI start sequence .state .xmz .xiz .xly
  but can be either jack session or state not both.

2019-1-24 Will
* Complex float rounding towards zero now just int(n).
  Rationale: This in most cases restores the original
  Zyn 2.2.1 method. Also, the assembler hack used to get
  faster performance is not portable across CPU types.
  These conversion were all for positive only values so
  there is no +- zero issue and the int+truncf combination
  is *much* slower than just int, yet does exacly the same.

2019-1-23 Will
* Removed all remaining mutex references.
  Already almost entirely commented out.

2019-1-22 Will
* BugFix: missing 'else' so CLI filter not seeing L1/H1.
* Implemented loading MIDI learn fro CLI.
  Currently it seems you can only set one command line
  argument. Observed priority is .state .xmz .xiz .xly
  Need to see if this can be made recursive.
* Minor adustments to startup handover.

2019-1-20 Will