@@ -1,7 +1,7 @@
 /*
     InterChange.cpp - General communications
 
-    Copyright 2016-2018, Will Godfrey & others
+    Copyright 2016-2019, Will Godfrey & others
 
     This file is part of yoshimi, which is free software: you can redistribute
     it and/or modify it under the terms of the GNU Library General Public
@@ -17,7 +17,7 @@
     yoshimi; if not, write to the Free Software Foundation, Inc., 51 Franklin
     Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
-    Modified December 2018
+    Modified February 2019
 */
 
 #include <iostream>
@@ -972,7 +972,7 @@ void InterChange::indirectTransfers(CommandBlock *getData)
                             string name = synth->getRuntime().ConfigDir + "/copyright.txt";
                             if ((parameter & 0x7f) == 0) // load
                             {
-                                text = miscMsgPop(loadText(name));
+                                text = loadText(name); // TODO provide failure warning
                                 synth->part[npart]->info.Pauthor = text;
                                 guiTo = true;
                             }
